# llm-text-processor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  lua  pyproject.toml  pyrightconfig.json
app/: __init__.py  main.py
app/api/: routes.py
app/core/: __init__.py  config.py  db.py
app/models/: analysis.py
app/schemas/: __init__.py  analysis.py  llm.py  responses.py
app/services/: llm_service.py  nlp_utils.py
app/tests/: test_api.py  test_llm_service.py  test_nlp_utils.py
scripts/: download_nltk_data.py  init_db.py
